--- a/views/password-reset-otp.ejs
+++ b/views/password-reset-otp.ejs
@@ -10,50 +10,43 @@
     />
 
     <style>
+      /* common css */
       * {
         margin: 0;
         padding: 0;
-        box-sizing: border-box;
       }
       body {
-        display: grid;
-        height: 100vh;
-        place-items: center;
+        height: min-content;
         overflow-y: auto;
-        background: #bebdbd;
+        background: #f3f3f3;
         font-family: "Open Sans", sans-serif;
-        gap: 10px;
       }
       .template-container {
+        margin: 0 auto;
         background-color: #ffff;
         max-width: 600px;
         border-radius: 10px;
-        overflow-y: auto;
-        --webkit-scrollbar-width: none;
         padding-bottom: 20px;
         border: 1px solid #e6e6e6;
       }
-
-      /* .template-header {
-        display: grid;
-        place-items: center;
+      /* header css */
+      .template-header {
+        text-align: center;
         border-bottom: 1px solid #e6e6e6;
         padding: 20px;
       }
-
       .logo-img {
         width: 180px;
         height: 50px;
-      } */
-
-      .template-footer {
-        display: grid;
-        justify-items: center;
-        align-items: center;
-        text-align: center;
-        gap: 10px;
       }
-      .template-footer h2 {
+      /* header css */
+
+      /* footer css */
+      .template-footer {
+        text-align: center;
+        display: block;
+      }
+      .template-footer-heading {
         font-weight: 700;
         font-size: 20px;
         background: linear-gradient(90deg, #294393, #04a4e6 100%);
@@ -61,123 +54,141 @@
         background-clip: text;
         -webkit-text-fill-color: transparent;
       }
-
-      .template-footer span {
+      .template-footer-description {
         font-size: 14px;
         font-weight: 400;
         color: #4c4c4c;
-        line-height: 23px;
+        margin-top: 8px;
+        margin-bottom: 8px;
       }
-      .social-media-link {
-        display: grid;
-        grid-auto-flow: column;
-        justify-content: center;
-        align-items: center;
-        gap: 7px;
+      .template-footer-social-medias {
+        text-align: center;
       }
-      .social-media-link a {
+      .template-footer-social-media-link {
         text-decoration: none;
-        color: #ffff;
+        color: white;
         border-radius: 50%;
         width: 26px;
         height: 26px;
-        padding: 6px;
+        display: inline-block;
         background: linear-gradient(180deg, #01904d 0%, #0ce47f 100%);
-        display: grid;
-        place-items: center;
+        position: relative;
       }
-
-      @media screen and (max-width: 768px) {
-        .template-container {
-          padding-bottom: 10px;
-        }
-        .template-header {
-          padding: 10px;
-        }
-        .logo-img {
-          width: 140px;
-          height: 40px;
-        }
-        .template-footer {
-          gap: 5px;
-        }
-        .template-footer h2 {
-          font-size: 16px;
-          font-weight: 600;
-        }
-        .template-footer span {
-          font-size: 12px;
-        }
-        .social-media-link {
-          gap: 5px;
-        }
-        .social-media-link a {
-          width: 20px;
-          height: 20px;
-          padding: 5px;
-        }
+      .template-footer-social-media-icon {
+        position: absolute;
+        top: 50%;
+        left: 24%;
+        translate: 50%;
+        transform: translate(-50%, -50%);
       }
+      /* footer css */
 
-      /* common styles ended */
+      /* common css */
       .template-body {
         padding: 35px 30px;
-        display: grid;
-        grid-template-rows: auto auto;
-        gap: 30px;
       }
-
-      .template-body-content {
-        display: grid;
-        place-items: center;
+      .template-body-header {
         text-align: center;
-        gap: 10px;
       }
-
-      .template-body-content h1 {
+      .template-body-header h1 {
         font-size: 24px;
         font-weight: 700;
         color: #4c4c4c;
+        margin: 5px 0px;
       }
-
-      .template-body-content p {
+      .template-body-header p {
         font-size: 16px;
         font-weight: 400;
         color: #4c4c4c;
       }
 
-      .reset-password-otp-info {
-        display: grid;
-        gap: 20px;
+      .template-body-main {
         margin-top: 30px;
       }
-
-      .otp-box {
+      .otp-container {
         width: 80%;
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        justify-content: center;
-        align-items: center;
+        margin: 0 auto;
         background-color: #f7f7fb;
-        gap: 50px;
         padding: 25px 20px;
         border-radius: 20px;
-        place-items: center;
-        margin: 0 auto;
+        text-align: center;
       }
-
-      .otp-box span {
+      .otp-container span {
         font-weight: 700;
         font-size: 50px;
         line-height: 68px;
         text-align: center;
         color: #000000;
+        text-align: center;
+        margin: 0px 20px;
       }
-
-      .reset-password-otp-info p {
+      .template-body-description {
         font-size: 16px;
         font-weight: 400;
         color: #4c4c4c;
         text-align: center;
+        margin-top: 20px;
+      }
+
+      @media screen and (max-width: 768px) {
+        .template-container {
+          padding-bottom: 15px;
+        }
+        /* header media query css */
+        .template-header {
+          padding: 8px;
+        }
+        .logo-img {
+          width: 130px;
+          height: 40px;
+        }
+        /* header media query css */
+
+        /* footer media query css */
+        .template-footer-heading {
+          font-weight: 600;
+          font-size: 16px;
+        }
+        .template-footer-description {
+          font-size: 12px;
+          margin-top: 3px;
+          margin-bottom: 3px;
+        }
+        .template-footer-social-media-link {
+          width: 20px;
+          height: 20px;
+        }
+        .template-footer-social-media-icon {
+          left: 17%;
+          width: 14px;
+        }
+        /* footer media query css */
+
+        .template-body {
+          padding: 25px 20px;
+        }
+        .template-body-header h1 {
+          font-size: 20px;
+          font-weight: 600px;
+          margin: 4px 0px;
+        }
+        .template-body-header p {
+          font-size: 14px;
+        }
+
+        .template-body-main {
+          margin-top: 15px;
+        }
+        .otp-container span {
+          font-weight: 600px;
+          font-size: 40;
+          line-height: 30px;
+          margin: 0px 10px;
+        }
+        .template-body-description {
+          font-size: 14px;
+          margin-top: 10px;
+        }
       }
     </style>
   </head>
@@ -186,7 +197,7 @@
       <%- include('./components/header.ejs',{logoUrl}) %>
 
       <div class="template-body">
-        <div class="template-body-content">
+        <div class="template-body-header">
           <%- include('./components/heros/ResetPassOTPSvg.ejs') %>
 
           <h1>Password Reset OTP</h1>
@@ -195,13 +206,13 @@
             code below to complete the process:
           </p>
         </div>
-        <div class="reset-password-otp-info">
-          <div class="otp-box">
+        <div class="template-body-main">
+          <div class="otp-container">
             <% otp.forEach(digit => { %>
             <span><%= digit %></span>
             <% }); %>
           </div>
-          <p>
+          <p class="template-body-description">
             All you have to do is copy the confirmation code and paste it to
             your form to complete the email verification process.
           </p>
