--- a/views/password-reset-completed.ejs
+++ b/views/password-reset-completed.ejs
@@ -10,50 +10,43 @@
     />
 
     <style>
+      /* common css */
       * {
         margin: 0;
         padding: 0;
-        box-sizing: border-box;
       }
       body {
-        display: grid;
-        height: 100vh;
-        place-items: center;
+        height: min-content;
         overflow-y: auto;
-        background: #bebdbd;
+        background: #f3f3f3;
         font-family: "Open Sans", sans-serif;
-        gap: 10px;
       }
       .template-container {
+        margin: 0 auto;
         background-color: #ffff;
         max-width: 600px;
         border-radius: 10px;
-        overflow-y: auto;
-        --webkit-scrollbar-width: none;
         padding-bottom: 20px;
         border: 1px solid #e6e6e6;
       }
-
+      /* header css */
       .template-header {
-        display: grid;
-        place-items: center;
+        text-align: center;
         border-bottom: 1px solid #e6e6e6;
         padding: 20px;
       }
-
       .logo-img {
         width: 180px;
         height: 50px;
       }
+      /* header css */
 
+      /* footer css */
       .template-footer {
-        display: grid;
-        justify-items: center;
-        align-items: center;
         text-align: center;
-        gap: 10px;
+        display: block;
       }
-      .template-footer h2 {
+      .template-footer-heading {
         font-weight: 700;
         font-size: 20px;
         background: linear-gradient(90deg, #294393, #04a4e6 100%);
@@ -61,89 +54,65 @@
         background-clip: text;
         -webkit-text-fill-color: transparent;
       }
-
-      .template-footer span {
+      .template-footer-description {
         font-size: 14px;
         font-weight: 400;
         color: #4c4c4c;
-        line-height: 23px;
+        margin-top: 8px;
+        margin-bottom: 8px;
       }
-      .social-media-link {
-        display: grid;
-        grid-auto-flow: column;
-        justify-content: center;
-        align-items: center;
-        gap: 7px;
+      .template-footer-social-medias {
+        text-align: center;
       }
-      .social-media-link a {
+      .template-footer-social-media-link {
         text-decoration: none;
-        color: #ffff;
+        color: white;
         border-radius: 50%;
         width: 26px;
         height: 26px;
-        padding: 6px;
+        display: inline-block;
         background: linear-gradient(180deg, #01904d 0%, #0ce47f 100%);
-        display: grid;
-        place-items: center;
+        position: relative;
       }
+      .template-footer-social-media-icon {
+        position: absolute;
+        top: 50%;
+        left: 24%;
+        translate: 50%;
+        transform: translate(-50%, -50%);
+      }
+      /* footer css */
 
-      @media screen and (max-width: 768px) {
-        .template-container {
-          padding-bottom: 10px;
-        }
-        .template-header {
-          padding: 10px;
-        }
-        .logo-img {
-          width: 140px;
-          height: 40px;
-        }
-        .template-footer {
-          gap: 5px;
-        }
-        .template-footer h2 {
-          font-size: 16px;
-          font-weight: 600;
-        }
-        .template-footer span {
-          font-size: 12px;
-        }
-        .social-media-link {
-          gap: 5px;
-        }
-        .social-media-link a {
-          width: 20px;
-          height: 20px;
-          padding: 5px;
-        }
-      }
+      /* common css */
 
       /* common styles ended */
       .template-body {
         padding: 35px 30px;
-        display: grid;
-        place-items: center;
-        grid-auto-rows: auto;
-        gap: 30px;
       }
-      .template-body-content {
-        display: grid;
-        place-items: center;
+      .template-body-header {
         text-align: center;
-        gap: 10px;
       }
-      .template-body-content h1 {
+      .template-body-header h1 {
         font-size: 24px;
         font-weight: 700;
         color: #4c4c4c;
+        margin: 5px 0px;
       }
-      .template-body-content p {
+      .template-body-header p {
         font-size: 16px;
         font-weight: 400;
         color: #4c4c4c;
       }
+      .template-body-main {
+        margin: 50px auto;
+        position: relative;
+      }
 
       #access-now-btn {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         background: linear-gradient(90deg, #fb8e48, #cb380f 100%);
         border-radius: 50px;
         padding: 10px 20px;
@@ -152,8 +121,59 @@
         font-weight: 600;
         border: none;
         cursor: pointer;
-        margin-top: 20px;
         text-decoration: none;
+        text-align: center;
+      }
+
+      @media screen and (max-width: 768px) {
+        .template-container {
+          padding-bottom: 15px;
+        }
+        /* header media query css start */
+        .template-header {
+          padding: 8px;
+        }
+        .logo-img {
+          width: 130px;
+          height: 40px;
+        }
+        /* header media query css end */
+        /* footer media query css start */
+        .template-footer-heading {
+          font-weight: 600;
+          font-size: 16px;
+        }
+        .template-footer-description {
+          font-size: 12px;
+          margin-top: 3px;
+          margin-bottom: 3px;
+        }
+        .template-footer-social-media-link {
+          width: 20px;
+          height: 20px;
+        }
+        .template-footer-social-media-icon {
+          left: 17%;
+          width: 14px;
+        }
+        /* footer media query css end */
+
+        .template-body {
+          padding: 25px 20px;
+        }
+        .template-body-header h1 {
+          font-size: 20px;
+          font-weight: 600px;
+          margin: 4px 0px;
+        }
+        .template-body-header p {
+          font-size: 14px;
+        }
+        #access-now-btn {
+          font-size: 14px;
+          padding: 8px 16px;
+          font-weight: 500;
+        }
       }
     </style>
   </head>
@@ -162,7 +182,7 @@
       <%- include('./components/header.ejs',{logoUrl}) %>
 
       <div class="template-body">
-        <div class="template-body-content">
+        <div class="template-body-header">
           <%- include('./components/heros/PassResetCompletedSvg.ejs') %>
           <h1>Password Reset Completed</h1>
           <p>
@@ -170,6 +190,8 @@
             your new password. If you did not request this change, please
             contact support immediately.
           </p>
+        </div>
+        <div class="template-body-main">
           <a target="_blank" href="<%= accessUrl %>" id="access-now-btn">
             Access Now
           </a>
