--- a/views/customer-greetings.ejs
+++ b/views/customer-greetings.ejs
@@ -16,18 +16,13 @@
         padding: 0;
       }
       body {
-        position: relative;
-        width: 100vw;
-        height: 100vh;
+        overflow-x: hidden;
         overflow-y: auto;
         background: #f3f3f3;
         font-family: "Open Sans", sans-serif;
       }
       .template-container {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        margin: 50px auto 25px auto;
         background-color: #ffff;
         width: 600px;
         border-radius: 10px;
@@ -82,8 +77,7 @@
       .template-footer-social-media-icon {
         position: absolute;
         top: 50%;
-        left: 24%;
-        translate: 50%;
+        left: 50%;
         transform: translate(-50%, -50%);
       }
       /* footer css */
@@ -205,7 +199,6 @@
           height: 20px;
         }
         .template-footer-social-media-icon {
-          left: 17%;
           width: 14px;
         }
         /* footer media query css */
