social media design issue resolved

--- a/views/components/footer.ejs
+++ b/views/components/footer.ejs
@@ -12,9 +12,14 @@
     >
       <img
         class="template-footer-social-media-icon"
-        src="<%= socialMedia.icon %>"
+        src="https://static.thenounproject.com/png/926001-200.png"
         alt=""
       />
+      <!-- <img
+        class="template-footer-social-media-icon"
+        src="<%= socialMedia.icon %>"
+        alt=""
+      /> -->
     </a>
     <% }); %>
   </div>
