--- a/views/password-reset-completed.ejs
+++ b/views/password-reset-completed.ejs
@@ -68,17 +68,18 @@
         text-decoration: none;
         color: white;
         border-radius: 50%;
-        width: 26px;
-        height: 26px;
+        width: 26px; /* Adjust size if needed */
+        height: 26px; /* Ensure this matches line-height */
         display: inline-block;
         background: linear-gradient(180deg, #01904d 0%, #0ce47f 100%);
-        position: relative;
+        text-align: center;
       }
+
       .template-footer-social-media-icon {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        width: 16px;
+        height: 16px;
+        vertical-align: middle;
+        display: inline-block;
       }
       /* footer css */
 
@@ -128,6 +129,7 @@
         .template-container {
           padding-bottom: 15px;
           width: 100%;
+          border-radius: 5px;
         }
         /* header media query css start */
         .template-header {
@@ -148,13 +150,13 @@
           margin-top: 3px;
           margin-bottom: 3px;
         }
-        .template-footer-social-media-link {
+        /* .template-footer-social-media-link {
           width: 20px;
           height: 20px;
         }
         .template-footer-social-media-icon {
           width: 14px;
-        }
+        } */
         /* footer media query css end */
 
         .template-body {
