photos from server added

--- a/views/admin-greetings.ejs
+++ b/views/admin-greetings.ejs
@@ -256,7 +256,7 @@ border-radius: 5px;
 
       <div class="template-body">
         <div class="template-body-content">
-          <%- include('./components/heros/AdminGreetingSvg.ejs') %>
+          <img src="/mail_assets/AdminGreetings.png" alt="admin-greetings">
           <div><%= userRole %></div>
           <h1>Welcome To <%= shopName %></h1>
           <p>
