--- a/views/customer-greetings.ejs
+++ b/views/customer-greetings.ejs
@@ -221,7 +221,7 @@
 
       <div class="template-body">
         <div class="greetings-body-info">
-          <%- include('./components/heros/CustomerGreetingSvg.ejs') %>
+          <img src="/mail_assets/CustomerGreetings.png" alt="admin-greetings" />
           <h1>Welcome to <%= shopName %></h1>
         </div>
 
