--- a/views/password-reset-otp.ejs
+++ b/views/password-reset-otp.ejs
@@ -199,7 +199,7 @@
 
       <div class="template-body">
         <div class="template-body-header">
-          <%- include('./components/heros/ResetPassOTPSvg.ejs') %>
+          <img src="/mail_assets/PasswordResetOTP.png" alt="admin-greetings" />
 
           <h1>Password Reset OTP</h1>
           <p>
