--- a/views/sign-up-verification.ejs
+++ b/views/sign-up-verification.ejs
@@ -199,7 +199,10 @@
 
       <div class="template-body">
         <div class="template-body-header">
-          <%- include('./components/heros/SignupVerificationSvg.ejs') %>
+          <img
+            src="/mail_assets/SignupVerification.png"
+            alt="admin-greetings"
+          />
           <h1>Sign Up Verification Code</h1>
           <p>
             Please enter this confirmation code in the window where you started
