--- a/views/password-reset-completed.ejs
+++ b/views/password-reset-completed.ejs
@@ -184,7 +184,10 @@
 
       <div class="template-body">
         <div class="template-body-header">
-          <%- include('./components/heros/PassResetCompletedSvg.ejs') %>
+          <img
+            src="/mail_assets/PasswordResetCompleted.png"
+            alt="admin-greetings"
+          />
           <h1>Password Reset Completed</h1>
           <p>
             Your password has been successfully reset. You can now log in with
